# GeneratePrompt

./: .env.example  .gitignore  LICENSE  README.md  fix_script.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  start.bat  start.sh  test.py  test_request.py
config/: config.py
docs/: custom_gitlab.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DesignPromptGenerator.css  DesignPromptGenerator.tsx  MainPage.tsx  PromptGenerator.tsx
scripts/: check_config.py  start.py
src/: file_processor.py  main.py  prompt_optimizer.py  template_generator.py
src/agents/: __init__.py  base_agent.py  design_prompt_agent.py  design_prompt_agent_api.py  prompt_optimization_agent.py  react_agent.py  template_generation_agent.py
src/api/: main.py
src/api/endpoints/: __init__.py  design_prompt.py
src/models/: enums.py  schemas.py
src/templates/: __init__.py  prompt_templates.py  tech_stack_templates.py
src/utils/: cache_manager.py  design_image_processor.py  env_loader.py  local_project_processor.py  performance_monitor.py  rag_manager.py  vector_store.py
test/: __init__.py  conftest.py  test_integration.py  test_openai_config.py  test_openai_key.py  test_project.py  test_prompt_optimizer.py  test_template_generator.py
utils/: vector_store.py
